# credit-risk-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: main.py
config/: config.yaml
dashboard/: app.py
data/raw/: german_credit.csv  lending_club_sample.csv
docs/: DASHBOARD_MANUAL.md
mlruns/0/: meta.yaml
mlruns/122740724003562194/: meta.yaml
mlruns/122740724003562194/221fbdf9ec5f42b1984e9a5bdd1408ed/: meta.yaml
mlruns/122740724003562194/221fbdf9ec5f42b1984e9a5bdd1408ed/metrics/: test_metric
mlruns/122740724003562194/3f5be08644cd43209f988d41fb30224f/: meta.yaml
mlruns/122740724003562194/3f5be08644cd43209f988d41fb30224f/metrics/: test_metric
mlruns/122740724003562194/d996fed261bf47dd9c219e4248ec34a3/: meta.yaml
mlruns/122740724003562194/d996fed261bf47dd9c219e4248ec34a3/metrics/: test_metric
mlruns/122740724003562194/ffee0c3632e54b4b8adae55ebac7815c/: meta.yaml
mlruns/122740724003562194/ffee0c3632e54b4b8adae55ebac7815c/metrics/: test_metric
mlruns/122740724003562194/ffee0c3632e54b4b8adae55ebac7815c/tags/: mlflow.source.git.commit  mlflow.source.name
notebooks/: 01_german_credit_eda.ipynb  02_eda_clean.ipynb
scripts/: test_pipeline.py
src/data/: make_dataset.py  validation.py
src/features/: build_features.py
src/models/: train.py
src/utils/: logger.py
