[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk-mlops"
version = "0.1.0"
authors = [
    {name = "Asad Farooq", email = "asad.farooq4421@gmail.com"}
]
description = "End-to-End Credit Risk Prediction System with MLOps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.6.0",
    "fastapi>=0.104.0",
    "streamlit>=1.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "pre-commit>=3.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
